infrastructure/istio/peer-authentication.yaml
# Mutual TLS between services

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: healthflow
spec:
  mtls:
    mode: STRICT  # Require mTLS for all traffic
